# keyframe-extractor

./: AUTHORS  Makefile.am  configure.ac
src/: Makefile.am  cmdline.ggo  decoder.cc  decoder.hh  extractor.cc
src/libcvalgo/: histogram.cc  histogram.hh  histogram_diff.cc  histogram_diff.hh
